--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "0.0.3",
+    "cors": "^2.8.5",
     "http-status-codes": "^1.3.2",
+    "joi": "^14.3.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "0.0.16",
     "koa-logger": "^3.2.0",
     "koa-passport": "^4.1.1",
     "koa-router": "^7.4.0",
