--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "nothing101",
     "database": "tms",
     "host": "127.0.0.1",
     "dialect": "mysql"
@@ -15,8 +15,8 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "nothing101",
+    "database": "tms",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
